# autodomme

./: .gitignore  .requirements.txt.bak.kate-swp  Pipfile  Scripting.md  __main__.py  ai.py  authenticate.py  client.py  config.json  convert.py  crypto.py  crypto_functions.py  exp.py  filebrowser.py  finalProject.py  functions.py  git_functions.py  grammar.txt  icons.py  images.py  launch.sh  main_window.py  media.ui  mediaplayer.py  my_label.py  options.py  parser.py  pyproject.toml  qt_windows.py  remote.py  requirements.txt  script_parser.py  server.py  server_browser.py  session.py  solitaire.py  style.qss  tagger.py  tagger_ui.py  tagger_ui.ui  (+18 more)
Scripts/Module/: AssOrTitsMan_EDGING.txt
Scripts/Start/: HappyToSeeMe.md
icons/: icon.py
tagger/: imagetagger.py  imagetagger.pyproject
